{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 127,
  "lineage": "b532ee69-275e-0b67-b3f2-0028143cafa2",
  "resources": [
    {
      "module": "module.alb_dr",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:loadbalancer/app/dr-project-alb/b7880be59ff225da",
            "arn_suffix": "app/dr-project-alb/b7880be59ff225da",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dr-project-alb-1575856132.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:459058737090:loadbalancer/app/dr-project-alb/b7880be59ff225da",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dr-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e456f3881822aa7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003fafaa90a8a63ce"
              },
              {
                "subnet_id": "subnet-0b1ffdd76fde268d3"
              }
            ],
            "subnets": [
              "subnet-003fafaa90a8a63ce",
              "subnet-0b1ffdd76fde268d3"
            ],
            "vpc_id": "vpc-0245e1da1ac66ad13",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_subnet.dr_project_public_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dr",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:listener/app/dr-project-alb/b7880be59ff225da/f1707ccfda371f04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:459058737090:listener/app/dr-project-alb/b7880be59ff225da/f1707ccfda371f04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:loadbalancer/app/dr-project-alb/b7880be59ff225da",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_dr.aws_lb.app_alb",
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_subnet.dr_project_public_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dr",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:listener/app/dr-project-alb/b7880be59ff225da/f95366b82231721a",
            "certificate_arn": "arn:aws:acm:us-east-1:459058737090:certificate/015590c6-c626-426d-92dc-3faf486cd2a0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:targetgroup/dr-project-tg/075a48e16794babc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:459058737090:listener/app/dr-project-alb/b7880be59ff225da/f95366b82231721a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:loadbalancer/app/dr-project-alb/b7880be59ff225da",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2019-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm_dr.aws_acm_certificate.cert",
            "module.acm_dr.aws_acm_certificate_validation.cert",
            "module.alb_dr.aws_lb.app_alb",
            "module.alb_dr.aws_lb_target_group.app_tg",
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_subnet.dr_project_public_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb_dr",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:459058737090:targetgroup/dr-project-tg/075a48e16794babc",
            "arn_suffix": "targetgroup/dr-project-tg/075a48e16794babc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:459058737090:targetgroup/dr-project-tg/075a48e16794babc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dr-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group/sg-0e456f3881822aa7a",
            "description": "Enable https and http on Port (80 and 443)",
            "egress": [],
            "id": "sg-0e456f3881822aa7a",
            "ingress": [],
            "name": "dr-alb-sg",
            "name_prefix": "",
            "owner_id": "459058737090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-alb-sg"
            },
            "tags_all": {
              "Name": "dr-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group/sg-0f6bdf3342b43ff60",
            "description": "Enable 5432 from ec2 security group",
            "egress": [],
            "id": "sg-0f6bdf3342b43ff60",
            "ingress": [],
            "name": "dr-database-sg",
            "name_prefix": "",
            "owner_id": "459058737090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-database-sg"
            },
            "tags_all": {
              "Name": "dr-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group/sg-0de8115b372bbda70",
            "description": "Enable https from alb security group",
            "egress": [],
            "id": "sg-0de8115b372bbda70",
            "ingress": [],
            "name": "dr-ec2-sg",
            "name_prefix": "",
            "owner_id": "459058737090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-ec2-sg"
            },
            "tags_all": {
              "Name": "dr-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-00c293f3127b3a222",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00c293f3127b3a222",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e456f3881822aa7a",
            "security_group_rule_id": "sgr-00c293f3127b3a222",
            "tags": {
              "Name": "Allow all outbound"
            },
            "tags_all": {
              "Name": "Allow all outbound"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_sg_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-098487c1c22cdd69d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-098487c1c22cdd69d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f6bdf3342b43ff60",
            "security_group_rule_id": "sgr-098487c1c22cdd69d",
            "tags": {
              "Name": "Allow all outbound"
            },
            "tags_all": {
              "Name": "Allow all outbound"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.db_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_sg_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-061e5e95fddee6985",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-061e5e95fddee6985",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de8115b372bbda70",
            "security_group_rule_id": "sgr-061e5e95fddee6985",
            "tags": {
              "Name": "Allow all outbound"
            },
            "tags_all": {
              "Name": "Allow all outbound"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.ec2_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-0d9408085edfc2f55",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow remote HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-0d9408085edfc2f55",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e456f3881822aa7a",
            "security_group_rule_id": "sgr-0d9408085edfc2f55",
            "tags": {
              "Name": "Security Groups to allow HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow HTTP(80)"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-0ac41ec1c75af00ed",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow remote HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-0ac41ec1c75af00ed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e456f3881822aa7a",
            "security_group_rule_id": "sgr-0ac41ec1c75af00ed",
            "tags": {
              "Name": "Security Groups to allow HTTPS(443)"
            },
            "tags_all": {
              "Name": "Security Groups to allow HTTPS(443)"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-076c341b43dd713df",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow  HTTPS from alb",
            "from_port": 5432,
            "id": "sgr-076c341b43dd713df",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0de8115b372bbda70",
            "security_group_id": "sg-0f6bdf3342b43ff60",
            "security_group_rule_id": "sgr-076c341b43dd713df",
            "tags": {
              "Name": "dr-database-sg"
            },
            "tags_all": {
              "Name": "dr-database-sg"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.db_sg",
            "module.security_group_dr.aws_security_group.ec2_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-030ec55669d77ef5b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow  HTTPS from alb",
            "from_port": 443,
            "id": "sgr-030ec55669d77ef5b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e456f3881822aa7a",
            "security_group_id": "sg-0de8115b372bbda70",
            "security_group_rule_id": "sgr-030ec55669d77ef5b",
            "tags": {
              "Name": "dr-ec2-sg"
            },
            "tags_all": {
              "Name": "dr-ec2-sg"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.security_group_dr.aws_security_group.ec2_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_sg_ingress_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-0254332a99a777f84",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow  HTTP from alb",
            "from_port": 80,
            "id": "sgr-0254332a99a777f84",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e456f3881822aa7a",
            "security_group_id": "sg-0de8115b372bbda70",
            "security_group_rule_id": "sgr-0254332a99a777f84",
            "tags": {
              "Name": "dr-ec2-sg"
            },
            "tags_all": {
              "Name": "dr-ec2-sg"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.alb_sg",
            "module.security_group_dr.aws_security_group.ec2_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_dr",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_sg_ingress_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:security-group-rule/sgr-00225d415815ce40c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow remote SSH from anywhere",
            "from_port": 22,
            "id": "sgr-00225d415815ce40c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0de8115b372bbda70",
            "security_group_rule_id": "sgr-00225d415815ce40c",
            "tags": {
              "Name": "Security Groups to allow SSH(22)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22)"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_dr.aws_security_group.ec2_sg",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr_project_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:internet-gateway/igw-0fea1e2e9f3d043bf",
            "id": "igw-0fea1e2e9f3d043bf",
            "owner_id": "459058737090",
            "tags": {
              "Name": "dr-proj-internet-gateway"
            },
            "tags_all": {
              "Name": "dr-proj-internet-gateway"
            },
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_project_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:route-table/rtb-08afa5928c968a6e0",
            "id": "rtb-08afa5928c968a6e0",
            "owner_id": "459058737090",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dr-proj-private-rt"
            },
            "tags_all": {
              "Name": "dr-proj-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_project_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:route-table/rtb-0b16e45b84d2116b3",
            "id": "rtb-0b16e45b84d2116b3",
            "owner_id": "459058737090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fea1e2e9f3d043bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dr-proj-public-rt"
            },
            "tags_all": {
              "Name": "dr-proj-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dr.aws_internet_gateway.dr_project_internet_gateway",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_project_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e99f2e0131f39a3",
            "route_table_id": "rtb-08afa5928c968a6e0",
            "subnet_id": "subnet-049976a64bf19929b"
          },
          "dependencies": [
            "module.vpc_dr.aws_route_table.dr_project_private_route_table",
            "module.vpc_dr.aws_subnet.dr_project_private_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05472dcbafedc5b1f",
            "route_table_id": "rtb-08afa5928c968a6e0",
            "subnet_id": "subnet-0325059530211de49"
          },
          "dependencies": [
            "module.vpc_dr.aws_route_table.dr_project_private_route_table",
            "module.vpc_dr.aws_subnet.dr_project_private_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_project_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049131a60c9acc632",
            "route_table_id": "rtb-0b16e45b84d2116b3",
            "subnet_id": "subnet-0b1ffdd76fde268d3"
          },
          "dependencies": [
            "module.vpc_dr.aws_internet_gateway.dr_project_internet_gateway",
            "module.vpc_dr.aws_route_table.dr_project_public_route_table",
            "module.vpc_dr.aws_subnet.dr_project_public_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065cc4eb56e8d57e3",
            "route_table_id": "rtb-0b16e45b84d2116b3",
            "subnet_id": "subnet-003fafaa90a8a63ce"
          },
          "dependencies": [
            "module.vpc_dr.aws_internet_gateway.dr_project_internet_gateway",
            "module.vpc_dr.aws_route_table.dr_project_public_route_table",
            "module.vpc_dr.aws_subnet.dr_project_public_subnet",
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_project_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:subnet/subnet-049976a64bf19929b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049976a64bf19929b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459058737090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dr-proj-private-subnet-1"
            },
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:subnet/subnet-0325059530211de49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0325059530211de49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459058737090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dr-proj-private-subnet-2"
            },
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_project_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:subnet/subnet-0b1ffdd76fde268d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1ffdd76fde268d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459058737090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dr-proj-public-subnet-1"
            },
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:subnet/subnet-003fafaa90a8a63ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003fafaa90a8a63ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459058737090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dr-proj-public-subnet-2"
            },
            "vpc_id": "vpc-0245e1da1ac66ad13"
          },
          "dependencies": [
            "module.vpc_dr.aws_vpc.dr_project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459058737090:vpc/vpc-0245e1da1ac66ad13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0b913f0300791af98",
            "default_route_table_id": "rtb-0a53609c99cb5f4b2",
            "default_security_group_id": "sg-09b868be11b8b489d",
            "dhcp_options_id": "dopt-0b8b0e82076b68c9c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0245e1da1ac66ad13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a53609c99cb5f4b2",
            "owner_id": "459058737090",
            "tags": {
              "Name": "dr-proj-us-east-vpc"
            },
            "tags_all": {
              "Name": "dr-proj-us-east-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}